# cachemere

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  cachemereConfig.cmake.in  heterogeneousLookup.dox  implementingCustomPolicies.dox  justfile  usingCustomKeys.dox  vcpkg.json
.github/workflows/: docs.yml  test.yml
benchmarks/: CMakeLists.txt
benchmarks/accuracy/: CMakeLists.txt
benchmarks/accuracy/src/: io_benchmark.cpp
benchmarks/performance/: CMakeLists.txt
benchmarks/performance/src/: bench_cache.cpp
docs/: annotated.html  bind_8h_source.html  bloom__filter_8h_source.html  bloom__filter_8hpp_source.html  bloom__filter__math_8h_source.html  cache_8h_source.html  cache_8hpp_source.html  cachemere_8h_source.html  classcachemere_1_1Cache-members.html  classcachemere_1_1Cache.html  classcachemere_1_1policy_1_1ConstraintCount-members.html  classcachemere_1_1policy_1_1ConstraintCount.html  classcachemere_1_1policy_1_1ConstraintMemory-members.html  classcachemere_1_1policy_1_1ConstraintMemory.html  classcachemere_1_1policy_1_1EvictionGDSF-members.html  classcachemere_1_1policy_1_1EvictionGDSF.html  classcachemere_1_1policy_1_1EvictionGDSF_1_1VictimIterator-members.html  classcachemere_1_1policy_1_1EvictionGDSF_1_1VictimIterator.html  classcachemere_1_1policy_1_1EvictionLRU-members.html  classcachemere_1_1policy_1_1EvictionLRU.html  classcachemere_1_1policy_1_1EvictionLRU_1_1VictimIterator-members.html  classcachemere_1_1policy_1_1EvictionLRU_1_1VictimIterator.html  classcachemere_1_1policy_1_1EvictionSegmentedLRU-members.html  classcachemere_1_1policy_1_1EvictionSegmentedLRU.html  classcachemere_1_1policy_1_1EvictionSegmentedLRU_1_1VictimIterator-members.html  classcachemere_1_1policy_1_1EvictionSegmentedLRU_1_1VictimIterator.html  classcachemere_1_1policy_1_1InsertionAlways-members.html  classcachemere_1_1policy_1_1InsertionAlways.html  classcachemere_1_1policy_1_1InsertionTinyLFU-members.html  classcachemere_1_1policy_1_1InsertionTinyLFU.html  classcachemere_1_1policy_1_1detail_1_1BloomFilter-members.html  classcachemere_1_1policy_1_1detail_1_1BloomFilter.html  classcachemere_1_1policy_1_1detail_1_1CountingBloomFilter-members.html  classcachemere_1_1policy_1_1detail_1_1CountingBloomFilter.html  classcachemere_1_1policy_1_1detail_1_1HashMixer.html  classcachemere_1_1policy_1_1detail_1_1HashMixer__inherit__graph.dot  classcachemere_1_1presets_1_1detail_1_1SpecializedGDSFCache-members.html  classcachemere_1_1presets_1_1detail_1_1SpecializedGDSFCache.html  classes.html  constraint__count_8h_source.html  (+79 more)
docs/html/: annotated.html  bloom__filter_8h_source.html  bloom__filter_8hpp_source.html  bloom__filter__math_8hpp_source.html  cache_8h_source.html  cache_8hpp_source.html  cachemere_8h_source.html  classcachemere_1_1Cache-members.html  classcachemere_1_1Cache.html  classcachemere_1_1policy_1_1EvictionGDSF.html  classcachemere_1_1policy_1_1EvictionGDSF_1_1VictimIterator-members.html  classcachemere_1_1policy_1_1EvictionGDSF_1_1VictimIterator.html  classcachemere_1_1policy_1_1EvictionLRU-members.html  classcachemere_1_1policy_1_1EvictionLRU.html  classcachemere_1_1policy_1_1EvictionLRU_1_1VictimIterator-members.html  classcachemere_1_1policy_1_1EvictionLRU_1_1VictimIterator.html  classcachemere_1_1policy_1_1EvictionLRU_3_01Key_00_01Value_01_4-members.html  classcachemere_1_1policy_1_1EvictionLRU_3_01Key_00_01Value_01_4.html  classcachemere_1_1policy_1_1EvictionLRU_3_01Key_00_01Value_01_4__coll__graph.map  classcachemere_1_1policy_1_1EvictionLRU_3_01Key_00_01Value_01_4__coll__graph.md5  classcachemere_1_1policy_1_1EvictionSegmentedLRU-members.html  classcachemere_1_1policy_1_1EvictionSegmentedLRU.html  classcachemere_1_1policy_1_1EvictionSegmentedLRU_1_1VictimIterator-members.html  classcachemere_1_1policy_1_1EvictionSegmentedLRU_1_1VictimIterator.html  classcachemere_1_1policy_1_1EvictionSegmentedLRU_3_01Key_00_01Value_01_4-members.html  classcachemere_1_1policy_1_1EvictionSegmentedLRU_3_01Key_00_01Value_01_4.html  classcachemere_1_1policy_1_1EvictionSegmentedLRU_3_01Key_00_01Value_01_4__coll__graph.map  classcachemere_1_1policy_1_1EvictionSegmentedLRU_3_01Key_00_01Value_01_4__inherit__graph.md5  classcachemere_1_1policy_1_1InsertionAlways-members.html  classcachemere_1_1policy_1_1InsertionAlways.html  classcachemere_1_1policy_1_1InsertionTinyLFU-members.html  classcachemere_1_1policy_1_1InsertionTinyLFU.html  classcachemere_1_1policy_1_1detail_1_1BloomFilter-members.html  classcachemere_1_1policy_1_1detail_1_1BloomFilter.html  classcachemere_1_1policy_1_1detail_1_1CountingBloomFilter-members.html  classcachemere_1_1policy_1_1detail_1_1CountingBloomFilter.html  classcachemere_1_1policy_1_1detail_1_1HashMixer-members.html  classcachemere_1_1policy_1_1detail_1_1HashMixer.html  classcachemere_1_1policy_1_1detail_1_1HashMixer__coll__graph.map  classcachemere_1_1policy_1_1detail_1_1HashMixer__inherit__graph.md5  (+86 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  (+10 more)
include/: cachemere.h
include/cachemere/: cache.h  cache.hpp  hash.h  item.h  measurement.h  measurement.hpp  presets.h
tests/: CMakeLists.txt
tests/src/: cache_tests.cpp  count_cache_tests.cpp  measurement_tests.cpp  memory_cache_tests.cpp
tests/src/detail/: heterogeneous_lookup_tests.cpp
tests/src/policy/: constraint_count_tests.cpp  constraint_memory_tests.cpp  eviction_gdsf_tests.cpp  eviction_lru_tests.cpp  eviction_segmented_lru_tests.cpp  insertion_always_tests.cpp  insertion_tinylfu_tests.cpp
tests/src/policy/detail/: bloom_filter_tests.cpp  counting_bloom_filter_tests.cpp  hash_mixer_tests.cpp
(+70 files in other folders)
